--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "postcss-loader": "^4.1.0",
     "sass-loader": "^10.1.0",
     "style-loader": "^2.0.0",
+    "url-loader": "^4.1.1",
     "webpack": "^4.41.3",
     "webpack-cli": "^4.2.0",
     "webpack-dev-server": "^3.11.0"
