--- a/webpack-v4/package.json
+++ b/webpack-v4/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "boilerplate-v2",
+  "name": "webpack-v4",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "start": "webpack serve --config webpack.dev.js",
-    "build": "webpack --config webpack.prod.js"
+    "start": "webpack serve --hot --config webpack.dev.js",
+    "build": "webpack --config webpack.prod.js",
+    "live": "live-server --no-browser dist/"
   },
   "keywords": [],
   "author": "",
@@ -20,15 +21,16 @@
     "file-loader": "^6.2.0",
     "html-loader": "^1.3.2",
     "html-webpack-plugin": "^4.5.0",
+    "live-server": "^1.2.1",
     "mini-css-extract-plugin": "^1.3.1",
-    "node-sass": "^5.0.0",
     "postcss-cli": "^8.3.0",
     "postcss-loader": "^4.1.0",
+    "sass": "^1.32.5",
     "sass-loader": "^10.1.0",
     "style-loader": "^2.0.0",
     "url-loader": "^4.1.1",
     "webpack": "^4.41.3",
     "webpack-cli": "^4.2.0",
-    "webpack-dev-server": "^3.11.0"
+    "webpack-dev-server": "^3.11.0",
   }
 }
