--- a/webpack-v5/package.json
+++ b/webpack-v5/package.json
@@ -6,27 +6,29 @@
   "scripts": {
     "start": "webpack serve",
     "build": "NODE_ENV=production webpack",
-    "live": "live-server --no-browser dist/"
+    "test": "tsc"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.12.13",
-    "@babel/preset-env": "^7.12.13",
+    "@babel/core": "^7.15.8",
+    "@babel/preset-env": "^7.15.8",
+    "@babel/preset-typescript": "^7.15.0",
     "babel-loader": "^8.2.2",
-    "clean-webpack-plugin": "^3.0.0",
-    "css-loader": "^5.0.2",
-    "html-webpack-plugin": "^5.0.0",
-    "live-server": "^1.2.1",
-    "mini-css-extract-plugin": "^1.3.6",
-    "postcss": "^8.2.5",
-    "postcss-loader": "^5.0.0",
+    "clean-webpack-plugin": "^4.0.0",
+    "css-loader": "^6.4.0",
+    "html-loader": "^2.1.2",
+    "html-webpack-plugin": "^5.3.2",
+    "mini-css-extract-plugin": "^2.4.2",
+    "postcss": "^8.3.9",
+    "postcss-loader": "^6.1.1",
     "postcss-preset-env": "^6.7.0",
-    "sass": "^1.32.6",
-    "sass-loader": "^11.0.1",
-    "webpack": "^5.21.2",
-    "webpack-cli": "^4.5.0",
-    "webpack-dev-server": "^3.11.2"
+    "sass": "^1.42.1",
+    "sass-loader": "^12.2.0",
+    "typescript": "^4.4.3",
+    "webpack": "^5.58.1",
+    "webpack-cli": "^4.9.0",
+    "webpack-dev-server": "^4.3.1"
   }
 }
