--- a/webpack-react/package.json
+++ b/webpack-react/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "webpack-v5",
+  "name": "webpack-v5-react-typescript",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
   "scripts": {
     "start": "webpack serve",
     "build": "NODE_ENV=production webpack",
-    "test": "tsc"
+    "types": "tsc"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +16,7 @@
     "@babel/preset-env": "^7.15.8",
     "@babel/preset-react": "^7.14.5",
     "@babel/preset-typescript": "^7.15.0",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.1",
     "@types/react": "^17.0.29",
     "@types/react-dom": "^17.0.9",
     "babel-loader": "^8.2.2",
@@ -27,6 +28,7 @@
     "postcss": "^8.3.9",
     "postcss-loader": "^6.1.1",
     "postcss-preset-env": "^6.7.0",
+    "react-refresh": "^0.10.0",
     "sass": "^1.42.1",
     "sass-loader": "^12.2.0",
     "typescript": "^4.4.3",
